fixed wordwrap on mobile devices

--- a/app/assets/stylesheets/international_phones.scss
+++ b/app/assets/stylesheets/international_phones.scss
@@ -97,6 +97,10 @@
     height: 30%;
     width: auto;
   }
+
+  .intl-tel-input .country-list {
+    white-space: nowrap;
+  }
 }
 
 .intl-tel-input .country-list .divider {
